--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,12 @@
   }
 }
 
+.Gallery {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
